# spa

./: .gitignore  CMakeLists.txt  GenerateProject.sh  Makefile  README.md  spa.cpp  spa.h  spa_io.cpp  spa_io.h  spa_types.h  spa_util.cpp
Src/: CMakeLists.txt
Src/Spa/: CMakeLists.txt  main.cpp  spa.cpp  spa.h  spa_io.cpp  spa_io.h  spa_queue.cpp  spa_queue.h  spa_types.h  spa_util.cpp  spa_util.h
Src/Spa/Tests/: SpaTests.cpp
manual/: spa_manual.tex
